booking-state-validation.txt

> demac-corporation@1.0.0 typecheck
> tsc --noEmit

src/screens/AgendaScreen.tsx(708,3): error TS1109: Expression expected.
src/screens/AgendaScreen.tsx(1110,4): error TS1005: '}' expected.

> demac-corporation@1.0.0 build:web
> expo export --platform web

Starting Metro Bundler

Web Bundling failed 10062ms index.ts (244 modules)

SyntaxError: SyntaxError: /home/runner/work/demac-corporation/demac-corporation/src/screens/AgendaScreen.tsx: Unexpected token (708:2)

[0m [90m 706 |[39m
 [90m 707 |[39m   [36mreturn[39m (
[31m[1m>[22m[39m[90m 708 |[39m   [36mreturn[39m (
 [90m     |[39m   [31m[1m^[22m[39m
 [90m 709 |[39m     [33m<[39m[33mScrollView[39m contentContainerStyle[33m=[39m{styles[33m.[39mpage}[33m>[39m
 [90m 710 |[39m       {combinedDataError [33m?[39m (
 [90m 711 |[39m         [33m<[39m[33mView[39m style[33m=[39m{styles[33m.[39merrorBanner}[33m>[39m[0m

TYPECHECK_EXIT=2
BUILD_EXIT=1
NODE_EXIT=0
